# mockcast

./: .contributors.jsonl  .contributors.yml  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Makefile  PROJECTS.md  README.md  commitlint.config.mjs  justfile  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  commitlint.yml  publish.yml  release-please.yml  update-contributors.yml
docs/superpowers/plans/: 2026-06-04-flox-ai-demo.md  2026-06-07-ci-release-contributors.md
docs/superpowers/specs/: 2026-06-04-flox-ai-demo-design.md  2026-06-07-ci-release-contributors-design.md
examples/: acme-ai-day.yaml  styled-output.yaml
src/mockcast/: cli.py  engine.py  models.py  writer.py
tests/: test_cli.py  test_engine.py  test_golden.py  test_models.py  test_writer.py
tests/fixtures/: golden.cast  golden.yaml
