[project]
name = "mockcast"
version = "0.2.0"
description = "Vaporware demos as code: render scripted terminal sessions to asciicast v3 (and GIF via agg)"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Steve Morin", email = "steve.morin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
mockcast = "mockcast.cli:main"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]
